@@ -13,6 +13,7 @@ Things for the short term:
 - lcterm: Support keyboard input
 - MtxOrb: Recover the code for I2C connectivity to MtxOrb
 - shuttleVFD: Use output() method for these special "out-of-band" symbols.
+- glk: port icon, vBar and hBar to 0.5 API.
 
 
 Things for the longer term:
